--- a/index.html
+++ b/index.html
@@ -22,8 +22,19 @@
                     <h1>Generador</h1>
                     <p><span class="container__texto-azul" id="textoAzul">de Contraseñas</span></p>
                     <div class="container__campo">
-                        <label class="texto__parrafo">Cantidad
-                            <input class="container__input" type="number" id="cantidad">
+                        <label class="texto__parrafo">Cantidad de caracteres
+                            <input class="container__input" type="range" value="14" min="14" max="22" step="1" list="values" id="cantidad">
+                            <datalist id="tickmarks">
+                                <option value="14" label="14"></option>
+                                <option value="15" label="15"></option>
+                                <option value="16" label="16"></option>
+                                <option value="17" label="17"></option>
+                                <option value="18" label="18"></option>
+                                <option value="19" label="19"></option>
+                                <option value="20" label="20"></option>
+                                <option value="21" label="21"></option>
+                                <option value="22" label="22"></option>
+                            </datalist>
                         </label>
                         <button class="boton" onclick="generar()" id="generar">Generar</button>
                         <button class="boton_borrar" onclick="reiniciar()" id="borrar" disabled>Borrar</button>
